@startuml
abstract class models.Model {

}

class models.Customer {

}

class models.Employee {

}

class models.FoodCategory {

    
}

class models.FoodItem {

}

class models.Order {

}

class models.OrderItem {

}

class models.Session {

}

class models.Shipment {

}

class models.Table {

}

class models.WorkDay {

}

class models.statistical.EmployeeIncome {

}

class models.statistical.EmployeeSalary {

}

class models.statistical.ProductIncome {

}

class models.statistical.WorkingDay {

}

class models.statistical.WorkingMinus {
}

class utils.EmployeePermission {

}

class utils.OrderStatus {

}

class utils.OrderType {

}

class utils.ShipmentStatus {

}

class utils.StringToSlug {

}

class utils.TableStatus {

}

models.Customer --|> models.Model
models.Employee --|> models.Model
models.FoodCategory --|> models.Model
models.FoodItem --|> models.Model
models.Order --|> models.Model
models.OrderItem --|> models.Model
models.Session --|> models.Model
models.Shipment --|> models.Model
models.Table --|> models.Model
models.statistical.EmployeeIncome o-- models.Employee
models.statistical.EmployeeSalary o-- models.Employee
models.statistical.ProductIncome o-- models.FoodItem

models.Customer "1" o-- "0..*" models.Order
models.Employee "1" o-- "0..*" models.Order
models.Order "1" o-- "1..*" models.OrderItem
models.OrderItem "1" o-- "1" models.FoodItem
models.Order "1" o-- "0..1" models.Shipment
models.Employee "1" o-- "0..*" models.Session

models.Order "1" o-- "1" utils.OrderStatus
models.Order "1" o-- "1" utils.OrderType
models.Shipment "1" o-- "1" utils.ShipmentStatus
models.Table "1" o-- "1" utils.TableStatus
models.FoodItem "1" o-- "1" utils.StringToSlug
models.Employee "1" o-- "1" utils.EmployeePermission
@enduml